--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "level": "^1.7.0",
-    "morgan": "~1.8.1",
-    "sillyid": "^0.2.0"
+    "morgan": "~1.8.1"
   }
 }
