--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "level": "^1.7.0",
-    "morgan": "~1.8.1"
+    "morgan": "~1.8.1",
+    "xlsx": "^0.10.5"
   }
 }
